# zephyr_testing_app

./: .gitignore  README.md  requirements.txt  test.resc  west.yml
.cache/clangd/index/: initial_test.cpp.621720F8531CC88C.idx
app/: CMakeLists.txt  prj.conf
app/src/: initial_test.cpp  main.c  main_aa.c  main_cryptoparams_test.c  main_encoder_test.c  main_math_test.c  test_ckks_params.c  test_encode.c  test_ntt.c
